--- a/ACC/Views/Reviews/Index.cshtml
+++ b/ACC/Views/Reviews/Index.cshtml
@@ -6,6 +6,11 @@
     bool reviewedByMe = ViewBag.ReviewedByMe;
     bool startedByMe = ViewBag.StartedByMe;
     bool showArchived = ViewBag.ShowArchived;
+    int id = ViewBag.Id;
+    var CurrentUserId = UserManager.GetUserId(User);
+    bool hasAdminAccess = UserRoleService.HasGlobalAccess(CurrentUserId, GlobalAccessLevels.AccountAdmin) ||
+                          UserRoleService.HasProjectAccess(CurrentUserId, id, ProjectAccessLevels.ProjectAdmin)||
+                          UserRoleService.HasProjectAccess(CurrentUserId, id, ProjectAccessLevels.ProjectMember);
 
  }
 
@@ -128,9 +133,13 @@
     <hr />
 
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#CreateReviewModal">
-            <i class="bi bi-plus-lg"></i> Create Review
-        </button>
+            @if(hasAdminAccess)
+            {
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#CreateReviewModal">
+              <i class="bi bi-plus-lg"></i> Create Review
+             </button>
+                
+            }
 
             <div class="d-flex justify-content-between button-group mb-3">
                 <form asp-action="Index" asp-controller="Reviews" method="get" class="d-flex">
@@ -176,32 +185,32 @@
                        
                         <td>@item.FinalReviewStatus</td>
 
-                    @if (ViewBag.StartedByMe == true)
-                    {
-                            <td>
-                        
-                             <form asp-action="StartReview" method="post" asp-route-Id="@item.Id" style="display:inline">
-                                 <button type="submit" class="btn btn-success btn-sm" @(item.CurrentStepView != "Pending" || item.FinalReviewStatus == "Approved" ? "disabled" : "")>
-                                     Start Review
-                                 </button>
-                             </form>
+                        @if (ViewBag.StartedByMe == true)
+                        {
+                                <td>
                             
+                                 <form asp-action="StartReview" method="post" asp-route-Id="@item.Id" style="display:inline">
+                                     <button type="submit" class="btn btn-success btn-sm" @(item.CurrentStepView != "Pending" || item.FinalReviewStatus == "Approved" ? "disabled" : "")>
+                                         Start Review
+                                     </button>
+                                 </form>
+                                
+                                </td>
+                           
+                           
+                            <td>
+                                <button class="btn btn-sm btn-light toggle-menu">
+                                    <i class="fas fa-ellipsis-v"></i> <!-- Three-dot icon -->
+                                </button>
+                                <div class="action-menu position-absolute bg-white border shadow-sm rounded p-2" style="display: none;">
+                                    <form asp-action="DeleteConfirmed" method="post" onsubmit="return confirmDelete()" style="display:inline;">
+                                        <input type="hidden" name="id" value="@item.Id" />
+                                        <button type="submit" asp-action="Delete" asp-controller="Reviews" asp-route-Id="@item.Id" class="btn btn-danger">Delete</button>
+                                    </form>
+                                </div>
+                                
                             </td>
                         }
-                       
-                       
-                        <td>
-                            <button class="btn btn-sm btn-light toggle-menu">
-                                <i class="fas fa-ellipsis-v"></i> <!-- Three-dot icon -->
-                            </button>
-                            <div class="action-menu position-absolute bg-white border shadow-sm rounded p-2" style="display: none;">
-                                <form asp-action="DeleteConfirmed" method="post" onsubmit="return confirmDelete()" style="display:inline;">
-                                    <input type="hidden" name="id" value="@item.Id" />
-                                    <button type="submit" asp-action="Delete" asp-controller="Review" asp-route-Id="@item.Id" class="btn btn-danger">Delete</button>
-                                </form>
-                            </div>
-                            
-                        </td>
 
                     </tr>
                 }
