--- a/ACC/Views/_ViewImports.cshtml
+++ b/ACC/Views/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Identity
 @using DataLayer.Models.ClassHelper
 @inject UserManager<ApplicationUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
 @inject UserRoleService UserRoleService
 @inject IHttpContextAccessor HttpContextAccessor
 
