--- a/ACC/Views/Shared/_ProjectLayout.cshtml
+++ b/ACC/Views/Shared/_ProjectLayout.cshtml
@@ -359,6 +359,14 @@
                         </div>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a asp-controller="ProjectTeam" asp-action="index" asp-route-id="@id" class="nav-link text-dark">
+                        <div class="nav-link-content">
+                            <i class="fa-solid fa-cog me-3"></i>
+                            <span>Teams</span>
+                        </div>
+                    </a>
+                </li>
             </ul>
         </nav>
 
